// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Menu DisabledMenu smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-7 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #ffffff;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <button
                    class="emotion-5"
                    data-testid="button"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                        data-testid="_avatar"
                      >
                        TC
                      </div>
                      <span>
                        <span>
                          Tom Cruise
                        </span>
                      </span>
                      <span
                        class="emotion-8"
                      >
                        <svg
                          class="emotion-9"
                          viewBox="0 -3 13 14"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill-rule="nonzero"
                            id="dd-sm-dark"
                            transform="translate(-5.000000, -9.000000)"
                          >
                            <polygon
                              id="dd_arrow"
                              points="16 6 16 15 14 15 14 8 7 8 7 6"
                              transform="translate(11.500000, 10.500000) rotate(-225.000000) translate(-11.500000, -10.500000) "
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Menu MenuWithAvatarAndDifferentButtonColour smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-7 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #ffffff;
}

.emotion-23 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-23 path {
  fill: #1249C4;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <button
                    class="emotion-5"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                        data-testid="_avatar"
                      >
                        TC
                      </div>
                      <span>
                        <span>
                          Tom Cruise
                        </span>
                      </span>
                      <span
                        class="emotion-8"
                      >
                        <svg
                          class="emotion-9"
                          viewBox="0 -3 13 14"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill-rule="nonzero"
                            id="dd-sm-dark"
                            transform="translate(-5.000000, -9.000000)"
                          >
                            <polygon
                              id="dd_arrow"
                              points="16 6 16 15 14 15 14 8 7 8 7 6"
                              transform="translate(11.500000, 10.500000) rotate(-225.000000) translate(-11.500000, -10.500000) "
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <button
                    class="emotion-5"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                        data-testid="_avatar"
                      >
                        <img
                          src="https://mui.com/static/images/avatar/1.jpg"
                        />
                      </div>
                      <span>
                        <span>
                          Tom Cruise
                        </span>
                      </span>
                      <span
                        class="emotion-8"
                      >
                        <svg
                          class="emotion-9"
                          viewBox="0 -3 13 14"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill-rule="nonzero"
                            id="dd-sm-dark"
                            transform="translate(-5.000000, -9.000000)"
                          >
                            <polygon
                              id="dd_arrow"
                              points="16 6 16 15 14 15 14 8 7 8 7 6"
                              transform="translate(11.500000, 10.500000) rotate(-225.000000) translate(-11.500000, -10.500000) "
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <button
                    class="emotion-5"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                        data-testid="_avatar"
                      >
                        <span
                          class="emotion-8"
                        >
                          <svg
                            class="emotion-23"
                            fill="none"
                            viewBox="0 0 14 17"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                              fill="#54587F"
                            />
                            <path
                              d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                              fill="#54587F"
                            />
                          </svg>
                        </span>
                      </div>
                      <span>
                        <span>
                          Tom Cruise
                        </span>
                      </span>
                      <span
                        class="emotion-8"
                      >
                        <svg
                          class="emotion-9"
                          viewBox="0 -3 13 14"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill-rule="nonzero"
                            id="dd-sm-dark"
                            transform="translate(-5.000000, -9.000000)"
                          >
                            <polygon
                              id="dd_arrow"
                              points="16 6 16 15 14 15 14 8 7 8 7 6"
                              transform="translate(11.500000, 10.500000) rotate(-225.000000) translate(-11.500000, -10.500000) "
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <button
                    class="emotion-5"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                        data-testid="_avatar"
                      >
                        <span
                          class="emotion-8"
                        >
                          <svg
                            class="emotion-23"
                            fill="none"
                            viewBox="0 0 14 17"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                              fill="#54587F"
                            />
                            <path
                              d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                              fill="#54587F"
                            />
                          </svg>
                        </span>
                      </div>
                      <span>
                        <span>
                          Tom Cruise
                        </span>
                      </span>
                      <span
                        class="emotion-8"
                      >
                        <svg
                          class="emotion-9"
                          viewBox="0 -3 13 14"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill-rule="nonzero"
                            id="dd-sm-dark"
                            transform="translate(-5.000000, -9.000000)"
                          >
                            <polygon
                              id="dd_arrow"
                              points="16 6 16 15 14 15 14 8 7 8 7 6"
                              transform="translate(11.500000, 10.500000) rotate(-225.000000) translate(-11.500000, -10.500000) "
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Menu MenuWithOptionIconAndDifferentColour smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-7 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #1249C4;
}

.emotion-11 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-11 path {
  fill: #ffffff;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <button
                    class="emotion-5"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                        data-testid="_avatar"
                      >
                        <span
                          class="emotion-8"
                        >
                          <svg
                            class="emotion-9"
                            fill="none"
                            viewBox="0 0 14 17"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                              fill="#54587F"
                            />
                            <path
                              d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                              fill="#54587F"
                            />
                          </svg>
                        </span>
                      </div>
                      <span>
                        <span>
                          More
                        </span>
                      </span>
                      <span
                        class="emotion-8"
                      >
                        <svg
                          class="emotion-11"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="none"
                            stroke-width="1"
                          >
                            <path
                              d="M8,10.8 C8.77319865,10.8 9.4,11.4268014 9.4,12.2 C9.4,12.9731986 8.77319865,13.6 8,13.6 C7.22680135,13.6 6.6,12.9731986 6.6,12.2 C6.6,11.4268014 7.22680135,10.8 8,10.8 Z M8,6.6 C8.77319865,6.6 9.4,7.22680135 9.4,8 C9.4,8.77319865 8.77319865,9.4 8,9.4 C7.22680135,9.4 6.6,8.77319865 6.6,8 C6.6,7.22680135 7.22680135,6.6 8,6.6 Z M8,2.4 C8.77319865,2.4 9.4,3.02680135 9.4,3.8 C9.4,4.57319865 8.77319865,5.2 8,5.2 C7.22680135,5.2 6.6,4.57319865 6.6,3.8 C6.6,3.02680135 7.22680135,2.4 8,2.4 Z"
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <button
                    class="emotion-5"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                        data-testid="_avatar"
                      >
                        <span
                          class="emotion-8"
                        >
                          <svg
                            class="emotion-9"
                            fill="none"
                            viewBox="0 0 14 17"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                              fill="#54587F"
                            />
                            <path
                              d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                              fill="#54587F"
                            />
                          </svg>
                        </span>
                      </div>
                      <span>
                        <span>
                          More
                        </span>
                      </span>
                      <span
                        class="emotion-8"
                      >
                        <svg
                          class="emotion-11"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="none"
                            stroke-width="1"
                          >
                            <path
                              d="M8,10.8 C8.77319865,10.8 9.4,11.4268014 9.4,12.2 C9.4,12.9731986 8.77319865,13.6 8,13.6 C7.22680135,13.6 6.6,12.9731986 6.6,12.2 C6.6,11.4268014 7.22680135,10.8 8,10.8 Z M8,6.6 C8.77319865,6.6 9.4,7.22680135 9.4,8 C9.4,8.77319865 8.77319865,9.4 8,9.4 C7.22680135,9.4 6.6,8.77319865 6.6,8 C6.6,7.22680135 7.22680135,6.6 8,6.6 Z M8,2.4 C8.77319865,2.4 9.4,3.02680135 9.4,3.8 C9.4,4.57319865 8.77319865,5.2 8,5.2 C7.22680135,5.2 6.6,4.57319865 6.6,3.8 C6.6,3.02680135 7.22680135,2.4 8,2.4 Z"
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <button
                    class="emotion-5"
                    data-testid="button"
                    type="button"
                  >
                    <span
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                        data-testid="_avatar"
                      >
                        <span
                          class="emotion-8"
                        >
                          <svg
                            class="emotion-9"
                            fill="none"
                            viewBox="0 0 14 17"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                              fill="#54587F"
                            />
                            <path
                              d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                              fill="#54587F"
                            />
                          </svg>
                        </span>
                      </div>
                      <span>
                        <span>
                          More
                        </span>
                      </span>
                      <span
                        class="emotion-8"
                      >
                        <svg
                          class="emotion-11"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="none"
                            stroke-width="1"
                          >
                            <path
                              d="M8,10.8 C8.77319865,10.8 9.4,11.4268014 9.4,12.2 C9.4,12.9731986 8.77319865,13.6 8,13.6 C7.22680135,13.6 6.6,12.9731986 6.6,12.2 C6.6,11.4268014 7.22680135,10.8 8,10.8 Z M8,6.6 C8.77319865,6.6 9.4,7.22680135 9.4,8 C9.4,8.77319865 8.77319865,9.4 8,9.4 C7.22680135,9.4 6.6,8.77319865 6.6,8 C6.6,7.22680135 7.22680135,6.6 8,6.6 Z M8,2.4 C8.77319865,2.4 9.4,3.02680135 9.4,3.8 C9.4,4.57319865 8.77319865,5.2 8,5.2 C7.22680135,5.2 6.6,4.57319865 6.6,3.8 C6.6,3.02680135 7.22680135,2.4 8,2.4 Z"
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Menu MenuWithSelectionHandler smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div>
          <div>
            Selected: 
            <b>
              -
            </b>
          </div>
          <div>
            <div
              class="emotion-2"
            >
              <div
                class="emotion-3"
              >
                <button
                  class="emotion-4"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="emotion-5"
                  >
                    <span>
                      <span>
                        More
                      </span>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
